add post operation

--- a/PetStoreAPI/PetStoreAPI/appsettings.json
+++ b/PetStoreAPI/PetStoreAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=104.247.167.202\\MSSQLSERVER2022;Database=just2941_petStoreApi;User Id=just2941_kerem;Password=Keremkerem11/;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=LAPTOP-E94UL7TU\\SQLEXPRESS;Database=Pet_Store;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "ApiSettings": {
     "JwtOptions": {
