--- a/source/pet_store/mobile/pubspec.yaml
+++ b/source/pet_store/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.5
   http: ^1.4.0
   shared_preferences: ^2.5.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
