--- a/source/pet_store/front_end/package.json
+++ b/source/pet_store/front_end/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
-    "tailwindcss": "^4.1.11"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
