--- a/source/pet_store/mobile/pubspec.yaml
+++ b/source/pet_store/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   image_picker: ^1.1.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
